fixed things page card so that no info overflows off the card

--- a/FrontEnd/web-app/src/css/Card.css
+++ b/FrontEnd/web-app/src/css/Card.css
@@ -7,8 +7,8 @@
   transition: 0.2s;
   border-radius: 5px;
   margin: 0 5px 15px 5px;
-  min-height: 330px;
-  max-height: 330px;
+  min-height: 370px;
+  max-height: 370px;
 
 }
 
